[CRD iOS] Increase contrast ratio

* Make text on host setup instruction view darker so that the contrast
  ratio is higher than 4.5:1.
* Use Google Blue palette for the settings menu. Make primary text bold.

Bug: 806091
Change-Id: I7c6b02d502a24261e022eca329eb6766007563ea
Reviewed-on: https://chromium-review.googlesource.com/887720
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532058}
Former-commit-id: 8ab706d5308a0c054fcfb6b6486bd2eafd6c47f9