remoting/ios/app/remoting_theme.mm
@@ -62,10 +62,7 @@
   static UIColor* color;
   static dispatch_once_t onceToken;
   dispatch_once(&onceToken, ^{
-    color = [UIColor colorWithRed:52.f / 255.f
-                            green:174.f / 255.f
-                             blue:249.f / 255.f
-                            alpha:1.f];
+    color = [UIColor colorWithRed:0.29 green:0.58 blue:0.96 alpha:1.0];
   });
   return color;
 }
@@ -193,7 +190,12 @@
 }
 
 + (UIColor*)setupListTextColor {
-  return UIColor.grayColor;
+  static UIColor* color;
+  static dispatch_once_t onceToken;
+  dispatch_once(&onceToken, ^{
+    color = [UIColor colorWithWhite:0.38f alpha:1.f];
+  });
+  return color;
 }
 
 + (UIColor*)setupListNumberColor {
